# django-scrap

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
scrap/commands/: __init__.py  ingest_file.py
scrap/db/: __init__.py  encrypt_password.py
scrap/forms/fields/: __init__.py  char_field.py  complicated_model_choice_field.py  money_field.py
scrap/forms/widgets/: __init__.py  autocomplete.py  select.py
scrap/measures/: __init__.py
scrap/models/: __init__.py  autocomplete_filter.py  wide_filter.py
scrap/static/css/: autocomplete.css
scrap/static/js/: autocomplete.js
scrap/templates/scrap/forms/widgets/: autocomplete.html  select_option.html
scrap/utils/: __init__.py  lists.py  string.py  table.py  units.py  uuid.py
scrap/views/: __init__.py  autocomplete_filter.py  wide_filter.py
